# takgeneral_back

./: .gitignore  .pre-commit-config.yaml  req.txt  setup.cfg
account/: admin.py  models.py  serializers.py  validators.py  views.py
core/: .gitignore  .pre-commit-config.yaml  db.sqlite3  req.txt  settings.py  setup.cfg  urls.py
core/account/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
core/account/migrations/: 0001_initial.py
core/core/: helpers.py  settings.py  urls.py
core/core/helpers/: zarinpal.py
core/extention/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/helpers/: sms.py
core/order/: admin.py  models.py  serializers.py  urls.py  views.py
core/product/: admin.py  apps.py  choices.py  managers.py  models.py  serializers.py  signals.py  urls.py  views.py
core/product/management/commands/: create_data.py  delete_data.py
core/product_action/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/setup/: version_punch.py
extention/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
order/: models.py  serializers.py  urls.py  views.py
product/: admin.py  apps.py  choices.py  managers.py  models.py  serializers.py  urls.py  views.py
product/management/commands/: create_data.py  delete_data.py
product_action/: admin.py  models.py  serializers.py  urls.py  views.py
setup/: version_punch.py
