[bumpversion]
current_version = 1.0.0
build_number = d9057adc
commit = False
tag = False

[metadata]
name = Tak General project
author = Mehrshad Ghamari
description = This is a  commerce project
long_description = This is a longer description for the project
url = https://hamafza-startup.ir
keywords = rabbitmq, setuptools

[options]
python_requires = >=3.9, <4
install_requires =
    django
	djangorestframework
	requests

[bumpversion:file:version.txt]


[flake8]
ignore = E221, E251, W191, E223, DUO102, N805, N802, N812, F403, F401, E266, E303, B019
exclude = .git,__pycache__
max-line-length = 170
